fix: for dynamically adding java agent we also nee to enable dynamic agent loading in Java